--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO DO</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="To_do icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="new/index.css">
+    <link rel="shortcut icon" href="new/To_do icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -99,7 +99,7 @@
         </ol>
         <span id="logo">© <span id="year"></span> JASDEs Solutions</span>
     </div>
-    <script src="index.js"></script>
+    <script src="new/index.js"></script>
 </body>
 
 </html>
