--- a/new/lv.html
+++ b/new/lv.html
@@ -300,6 +300,9 @@
         .calendar {
             width: 99.5vw;
         }
+        .yearModal{
+            margin-left: 72%;
+        }
 
         div.whole_calendar {
             width: 100%;
